--- a/sc-config-test.properties
+++ b/sc-config-test.properties
@@ -1,2 +1,2 @@
 server.port=9094
-message=Hello Client this is the Test config file
+message=Hello Client this is the Test config file testing the dynamicflow ???
